--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,5 @@
 <html>
+<head><script src=jQuery.min.js></script><script src=popup.js></script></head>
 <body>
 <h1 id=title>title</h1>
 <ul id=list>
