--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <head><script src=jQuery.min.js></script><script src=popup.js></script></head>
 <body>
 <h1 id=title>title</h1>
+<audio id=player controls></audio>
 <ul id=list>
 <li>empty list</li>
 </ul>
